For changes in earlier version, see <<history>>.

Also see <<new-in-sik>>.

[[x25-factory-listeners]]
==== Consumer/Producer Factory Changes

The default consumer and producer factories can now invoke a callback whenever a consumer or producer is created or closed.
Implementations for native Micrometer metrics are provided.
See <<factory-listeners>> for more information.

[[x25-kafka-client]]
==== Kafka Client Version

This version requires the 2.5.0 `kafka-clients`.

==== Class/Package Changes

`SeekUtils` has been moved from the `o.s.k.support` package to `o.s.k.listener`.

[[x25-delivery]]
==== Delivery Attempts Header

There is now an option to to add a header which tracks delivery attempts when using certain error handlers and after rollback processors.
See <<delivery-header>> for more information.

[[x25-message-return]]
==== @KafkaListener Changes

Default reply headers will now be populated automatically if needed when a `@KafkaListener` return type is `Message<?>`.
See <<reply-message>> for more information.

The `KafkaHeaders.RECEIVED_MESSAGE_KEY` is no longer populated with a `null` value when the incoming record has a `null` key; the header is omitted altogether.

[[x25-container]]
==== Listener Container Changes

The `assignmentCommitOption` container property is now `LATEST_ONLY_NO_TX` by default.
See <<container-props>> for more information.

The `subBatchPerPartition` container property is now `true` by default when using transactions.
See <<transactions>> for more information.

A new `RecoveringBatchErrorHandler` is now provided.
See <<recovering-batch-eh>> for more information.

Static group membership is now supported.
See <<message-listener-container>> for more information.

When incremental/cooperative rebalancing is configured, if offsets fail to commit with a non-fatal `RebalanceInProgressException`, the container will attempt to re-commit the offsets for the partitions that remain assigned to this instance after the rebalance is completed.
